---------------------------------------------------------------------------------------------------
Version: 0.1.17
Date: ???
  Bug fixes:
    - Fixed missing optional energy source bonuses
    - Fixed names of certain quality items and recipes
---------------------------------------------------------------------------------------------------
Version: 0.1.16
Date: 2023-11-21
  Bug fixes:
    - Fixed extra qualities breaking
---------------------------------------------------------------------------------------------------
Version: 0.1.15
Date: 2023-11-21
  Changes:
    - Added information about the deleveler
    - Refactored mods. Energy is now checked every time. Default mod accepts table.
    - Adjusted power for inserters and beacons
    - Recycling efficiency setting
    - Alternate item quality overlay position for better visibility on compacted belts
  Bug fixes:
    - Fixed quality armor not visible on character
---------------------------------------------------------------------------------------------------
Version: 0.1.14
Date: 2023-11-20
  Bug fixes:
    - Fixed low-resolution quality mask for beacons
    - Fixed programming not unlocking on some entities
    - Fixed icons of quality machines in upgrade planner
---------------------------------------------------------------------------------------------------
Version: 0.1.13
Date: 2023.11.19
  Changes:
    - Personal shields recharge proportionally with hit points
    - Moved quality enhancing machines to their own tab
    - Moved deleveler to the end of its subgroup so buildings fit nicer
    - Added quality overlay for beacon modules
  Bug fixes:
    - Fixed names of machines with quality modules
    - Fixed quality enhancing machines order
    - Fixed quality enhancing machine programming unlocks
---------------------------------------------------------------------------------------------------
Version: 0.1.12
Date: 2023.11.18
  Changes: